--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#" class="logo">Anisha<span>Parveen</span></a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#work">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -40,6 +41,18 @@
             </div>
         </div>
     </section>
+
+    <section id="about">
+        <div class="about-image">
+            <img src="img/profile1.jpg" alt="Anisha Praveen">
+        </div>
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>I am a Computer Science student specializing in Cloud Computing, skilled in C++, Java, AWS, Kubernetes, and Docker. I have built scalable systems like SkillSetGo, a course recommendation platform using vector search, and Scribe, a social platform with AI-driven summaries. Certified in multiple AWS programs, I am passionate about cloud solutions and efficient system design.</p>
+            <!-- <p>I am particularly interested in personalized learning pathways and course recommendation systems. My projects focus on improving user experiences and optimizing system performance.</p> -->
+        </div>
+    </section>
+    
 
    <!-- Skills Section -->
    <section id="skills" class="skills">
@@ -115,14 +128,14 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="img/project2.png" alt="Cloud Task Manager">
+                        <img src="img/project2.png" alt="InsightML">
                     </div>
                     <div class="project-content">
                         <h3>InsightML</h3>
                         <p>A Streamlit-based ML application that facilitates model training, predictions, and interpretability with tools like Evidently AI and SHAP.</p>
                         <div class="project-buttons">
                             <a href="https://github.com/anisha992/InsightML" class="project-button code-button">View Code</a>
-                            <a href="#" class="project-button demo-button">Live Demo</a>
+                            <a href="https://insightml-ercxbtqudp5wqfmv88c2oe.streamlit.app/" class="project-button demo-button">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +148,7 @@
                         <p>This engaging Streamlit web app offers an intuitive platform for efficient data exploration and visualization.</p>
                         <div class="project-buttons">
                             <a href="https://github.com/anisha992/Streamlit-Dashboard" class="project-button code-button">View Code</a>
-                            <a href="#" class="project-button demo-button">Live Demo</a>
+                            <a href="https://app-dashboard-juaecfjstscxmi2uurr6ra.streamlit.app/" class="project-button demo-button">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +161,7 @@
                         <p>A machine learning model built with Python and scikit-learn to predict survival probabilities on the Titanic.</p>
                         <div class="project-buttons">
                             <a href="https://github.com/anisha992/Titanic-Survival-Prediction" class="project-button code-button">View Code</a>
-                            <a href="#" class="project-button demo-button">Live Demo</a>
+                            <a href="https://titanic-survival-prediction-imtbqclgze8shxwr2z75ns.streamlit.app/" class="project-button demo-button">Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -161,7 +174,7 @@
                         <p>A Streamlit-based machine learning web app that classifies mushrooms as edible or poisonous.</p>
                         <div class="project-buttons">
                             <a href="https://github.com/anisha992/Binary-Classification-Web-App" class="project-button code-button">View Code</a>
-                            <a href="#" class="project-button demo-button">Live Demo</a>
+                            <a href="https://binary-classification-web-app-nu453cx2nh3j8appzksdekz.streamlit.app/" class="project-button demo-button">Live Demo</a>
                         </div>
                     </div>
                 </div>
