Made changes in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="about-content">
             <h2>About Me</h2>
-            <p>I am a Computer Science student specializing in Cloud Computing, skilled in C++, Java, AWS, Kubernetes, and Docker. I have built scalable systems like SkillSetGo, a course recommendation platform using vector search, and Scribe, a social platform with AI-driven summaries. Certified in multiple AWS programs, I am passionate about cloud solutions and efficient system design.</p>
+            <p>I am a Computer Science student specializing in Cloud Computing, skilled in C++, Java, AWS and Docker. I have built scalable systems like SkillSetGo, a course recommendation platform using vector search, and Scribe, a social platform with AI-driven summaries. Certified in multiple AWS programs, I am passionate about cloud solutions and efficient system design.</p>
             <!-- <p>I am particularly interested in personalized learning pathways and course recommendation systems. My projects focus on improving user experiences and optimizing system performance.</p> -->
         </div>
     </section>
@@ -80,7 +80,7 @@
                 <h3><i class="fas fa-server"></i> DevOps</h3>
                 <div class="skill-tags">
                     <span>Docker</span>
-                    <span>Kubernetes</span>
+<!--                     <span>Kubernetes</span> -->
                 </div>
             </div>
             
@@ -135,7 +135,7 @@
                         <p>A Streamlit-based ML application that facilitates model training, predictions, and interpretability with tools like Evidently AI and SHAP.</p>
                         <div class="project-buttons">
                             <a href="https://github.com/anisha992/InsightML" class="project-button code-button">View Code</a>
-                            <a href="https://insightml-ercxbtqudp5wqfmv88c2oe.streamlit.app/" class="project-button demo-button">Live Demo</a>
+                            <a href="https://insightml-75c9vyhfpc5ezb8k2pi353.streamlit.app/" class="project-button demo-button">Live Demo</a>
                         </div>
                     </div>
                 </div>
