Seperated all the sections

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anisha Parveen</title>
+    <title>About - Anisha Parveen</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -28,19 +28,19 @@
         </div>
     </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="home">
-        <div class="container">
-            <div class="home-content">
-                <h1>Hi, I'm <span>Anisha Parveen</span></h1>
-                <p>Passionate About Learning and Building</p>
+    <!-- About Section -->
+    <div class="page-content">
+        <section id="about">
+            <div class="about-image">
+                <img src="img/profile1.jpg" alt="Anisha Praveen">
             </div>
-            <div class="home-image">
-                <img src="img/profile.jpg" alt="Anisha Parveen">
+            <div class="about-content">
+                <h2>About Me</h2>
+                <p>I am a Computer Science student specializing in Cloud Computing, skilled in C++, Java, AWS and Docker. I have built scalable systems like SkillSetGo, a course recommendation platform using vector search, and Scribe, a social platform with AI-driven summaries. Certified in multiple AWS programs, I am passionate about cloud solutions and efficient system design.</p>
             </div>
-        </div>
-    </section>
-
+        </section>
+    </div>
+    
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
