Seperated all the sections

--- a/skills.html
+++ b/skills.html
@@ -37,8 +37,10 @@
                 <div class="skill-category">
                     <h3><i class="fas fa-cloud"></i> Programming Languages</h3>
                     <div class="skill-tags">
+                        <span>C</span>
                         <span>C++</span>
                         <span>Java</span>
+                        <span>Python</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -54,15 +56,7 @@
                     <h3><i class="fas fa-server"></i> DevOps</h3>
                     <div class="skill-tags">
                         <span>Docker</span>
-                    </div>
-                </div>
-                
-                <div class="skill-category">
-                    <h3><i class="fas fa-code"></i> Backend Development</h3>
-                    <div class="skill-tags">
-                        <span>Node.js</span>
-                        <span>Python</span>
-                        <span>MongoDB</span>
+                        <span>Git & GitHub</span>
                     </div>
                 </div>
                 
@@ -73,8 +67,20 @@
                         <span>CSS</span>
                         <span>JavaScript</span>
                         <span>React</span>
+                        <span>Flutter</span>
                     </div>
                 </div>
+
+                <div class="skill-category">
+                    <h3><i class="fas fa-code"></i> Backend Development</h3>
+                    <div class="skill-tags">
+                        <span>Node.js</span>
+                        <span>Python</span>
+                        <span>MongoDB</span>
+                        <span>Firebase</span>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
